--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
+env_logger = "0.11.8"
+log = "0.4.27"
+naga = "25.0.1"
 pollster = "0.4.0"
 wgpu = "25.0.2"
 winit = "0.30.11"
