--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
+bytemuck = { version = "1.23.2", features = ["derive"] }
+cgmath = "0.18.0"
 env_logger = "0.11.8"
 log = "0.4.27"
-naga = "25.0.1"
+naga = "26.0.0"
 pollster = "0.4.0"
-wgpu = "25.0.2"
+wgpu = "26.0.1"
 winit = "0.30.11"
